--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<properties>
 		<jsweet.transpiler.version>2.2.0-SNAPSHOT</jsweet.transpiler.version>
 	</properties>
-		<repositories>
+	<repositories>
 		<repository>
 			<id>jsweet-central</id>
 			<name>libs-release</name>
@@ -40,14 +40,22 @@
 			<version>6-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jsweet</groupId>
+			<artifactId>jsweet-core</artifactId>
+			<version>6-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.processing</groupId>
 			<artifactId>core</artifactId>
 			<version>3.3.7</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.processing</groupId>
-			<artifactId>pde</artifactId>
-			<version>3.3.7</version>
+			<groupId>org.jsweet.extension</groupId>
+			<artifactId>processing-jsweet-support</artifactId>
+			<version>3.3.7-SNAPSHOT</version>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 	<build>
@@ -69,7 +77,7 @@
 					<fork>true</fork>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
@@ -77,11 +85,12 @@
 				<configuration>
 					<verbose>true</verbose>
 					<bundle>true</bundle>
-					<outDir>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</outDir>
-					<tsOut>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</tsOut>
+					<outDir>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</outDir>
+					<tsOut>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</tsOut>
 					<targetVersion>ES5</targetVersion>
-                    <encoding>UTF-8</encoding>
-                    <ignoreTypeScriptErrors>true</ignoreTypeScriptErrors>
+					<encoding>UTF-8</encoding>
+					<ignoreTypeScriptErrors>true</ignoreTypeScriptErrors>
+					<factoryClassName>org.jsweet.extension.processing.ProcessingJSweetFactory</factoryClassName>
 				</configuration>
 				<executions>
 					<execution>
@@ -93,7 +102,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -112,7 +121,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -124,10 +133,11 @@
 					<encoding>UTF-8</encoding>
 					<fixTags>all</fixTags>
 					<failOnError>false</failOnError>
-                    <!-- leave these options unchanged to place the Javadoc at the right place for jsweet.org -->
-                    <reportOutputDirectory>/var/www/apidocs/releases/org/jsweet/candies</reportOutputDirectory>
-                    <destDir>${project.artifactId}/${project.version}</destDir>
-                    <!-- end of jsweet.org configuration -->
+					<!-- leave these options unchanged to place the Javadoc at the right 
+						place for jsweet.org -->
+					<reportOutputDirectory>/var/www/apidocs/releases/org/jsweet/candies</reportOutputDirectory>
+					<destDir>${project.artifactId}/${project.version}</destDir>
+					<!-- end of jsweet.org configuration -->
 					<header><![CDATA[<a href="http://www.jsweet.org" target="_blank" style="text-transform: lowercase">http://www.jsweet.org<a>]]></header>
 					<bottom><![CDATA[<center>Copyright 2015, <a href="http://www.cincheo.org" target="_blank">Cinchéo SAS<a> - Web site: <a href="http://www.jsweet.org" target="_blank">http://www.jsweet.org<a><center>]]></bottom>
 					<stylesheetfile>/var/www/apidocs/stylesheet.css</stylesheetfile>
@@ -142,7 +152,7 @@
 				</executions>
 			</plugin>
 		</plugins>
-		
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
