--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
 				<version>2.2.0-SNAPSHOT</version>
 				<configuration>
 					<verbose>true</verbose>
+					<enableAssertions>true</enableAssertions>
 					<bundle>true</bundle>
 					<outDir>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</outDir>
 					<tsOut>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</tsOut>
