--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jsweet.candies</groupId>
 	<artifactId>jbox2d-library</artifactId>
-	<version>2.3.1-SNAPSHOT</version>
+	<version>2.3.1.0</version>
 	<properties>
-		<jsweet.transpiler.version>2.2.0-SNAPSHOT</jsweet.transpiler.version>
+		<jsweet.transpiler.version>2.3.0</jsweet.transpiler.version>
+		<jsweet.core.version>6.0.1</jsweet.core.version>
+		<jsweet.processing-support.version>3.3.7.1</jsweet.processing-support.version>
+		<jsweet.candy.processing.version>3.3.7.3</jsweet.candy.processing.version>
 	</properties>
 		<repositories>
 		<repository>
@@ -37,7 +40,7 @@
 		<dependency>
 			<groupId>org.jsweet</groupId>
 			<artifactId>jsweet-core</artifactId>
-			<version>5-SNAPSHOT</version>
+			<version>${jsweet.core.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -64,13 +67,13 @@
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
-				<version>2.2.0-SNAPSHOT</version>
+				<version>${jsweet.transpiler.version}</version>
 				<configuration>
 					<verbose>true</verbose>
 					<bundle>true</bundle>
 					<outDir>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</outDir>
 					<tsOut>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</tsOut>
-					<targetVersion>ES5</targetVersion>
+					<targetVersion>ES6</targetVersion>
                     <encoding>UTF-8</encoding>
 				</configuration>
 				<executions>
