--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jsweet.candies</groupId>
 	<artifactId>jbox2d-library</artifactId>
-	<version>2.0.1-SNAPSHOT</version>
+	<version>2.0.1.2</version>
 	<properties>
-		<jsweet.transpiler.version>2.2.0-SNAPSHOT</jsweet.transpiler.version>
+		<jsweet.transpiler.version>2.3.0</jsweet.transpiler.version>
+		<jsweet.core.version>6.0.1</jsweet.core.version>
+		<jsweet.processing-support.version>3.3.7.1</jsweet.processing-support.version>
+		<jsweet.candy.jbox2d-library.version>2.3.1.0</jsweet.candy.jbox2d-library.version>
+		<jsweet.candy.processing.version>3.3.7.3</jsweet.candy.processing.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -34,23 +38,25 @@
 		</pluginRepository>
 	</pluginRepositories>
 	<dependencies>
+		
 		<dependency>
 			<groupId>org.jsweet</groupId>
 			<artifactId>jsweet-core</artifactId>
-			<version>6-SNAPSHOT</version>
+			<version>${jsweet.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsweet.candies</groupId>
 			<artifactId>processing</artifactId>
-			<version>3.3.7-SNAPSHOT</version>
+			<version>${jsweet.candy.processing.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jsweet.extension</groupId>
 			<artifactId>processing-jsweet-support</artifactId>
-			<version>3.3.7-SNAPSHOT</version>
+			<version>${jsweet.processing-support.version}</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src/main/java</sourceDirectory>
@@ -75,7 +81,7 @@
 			<plugin>
 				<groupId>org.jsweet</groupId>
 				<artifactId>jsweet-maven-plugin</artifactId>
-				<version>2.2.0-SNAPSHOT</version>
+				<version>${jsweet.transpiler.version}</version>
 				<configuration>
 					<verbose>true</verbose>
 					<enableAssertions>true</enableAssertions>
@@ -84,7 +90,7 @@
 					<tsOut>src/main/resources/META-INF/resources/webjars/${project.artifactId}/${project.version}</tsOut>
 					<declaration>true</declaration>
 					<dtsOut>src/main/resources/META-INF/resources/typings/${project.artifactId}/${project.version}</dtsOut>
-					<targetVersion>ES5</targetVersion>
+					<targetVersion>ES6</targetVersion>
 					<encoding>UTF-8</encoding>
 					<factoryClassName>org.jsweet.extension.processing.ProcessingJSweetFactory</factoryClassName>
 				</configuration>
